appId: com.clementgexpo.squadlink
---
- launchApp
- runFlow: auth-flow.yaml
- assertVisible: "Bonjour"
- assertVisible: "Profils compatibles"
- runFlow:
    when:
      visible: "Complétez votre profil"
    commands:
      - assertVisible: "pour découvrir plus de profils"
- scroll
- runFlow:
    when:
      visible: "Voir le profil"
    commands:
      - tapOn: "Voir le profil"
      - assertVisible: "Profil détaillé"
      - back
